# TokenizerFromScratch

./: README.md  conda_enviroment.yml  main.ipynb  pyproject.toml  training_data.txt  vocab_dict.json
data/: Attention_Is_All_You_Need.txt  Harry_Potter.txt  Harry_Potter_en.txt  Python_(programming_language).txt  Python_(programming_language)_en.txt  The_Big_Bang_Theory.txt  The_Big_Bang_Theory_en.txt
src/tokenizerfromscratch/: __init__.py
