[project]
name = "tokenizerfromscratch"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "rkomu", email = "ryukomura@icloud.com" }
]
dependencies = [
    "ipykernel>=6.29.5",
    "wikipedia>=1.4.0",
    "torch>=2.2.2",
    "regex>=2024.7.24",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/tokenizerfromscratch"]
